feat: manage workflow with airflow (version 3.1.6)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   source_postgres:
     image: postgres:17.7
@@ -25,38 +23,75 @@ services:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: destination_db
   
-  elt_script:
-    build:
-      context: /elt_script
-      dockerfile: Dockerfile
-    command: [ "python", "elt_script.py" ]
-    networks:
-      - elt_network
-    depends_on:
-      - source_postgres
-      - destination_postgres
+  # elt_script:
+  #   build:
+  #     context: /elt_script
+  #     dockerfile: Dockerfile
+  #   command: [ "python", "elt_script.py" ]
+  #   networks:
+  #     - elt_network
+  #   depends_on:
+  #     - source_postgres
+  #     - destination_postgres
   
-  dbt:
-    image: ghcr.io/dbt-labs/dbt-postgres:latest
-    command:
-      [
-        "run",
-        "--profiles-dir",
-        "/root/.dbt",
-        "--project-dir",
-        "/dbt"
-      ]
+  # dbt:
+  #   image: ghcr.io/dbt-labs/dbt-postgres:latest
+  #   command:
+  #     [
+  #       "run",
+  #       "--profiles-dir",
+  #       "/root/.dbt",
+  #       "--project-dir",
+  #       "/dbt"
+  #     ]
+  #   networks:
+  #     - elt_network
+  #   volumes:
+  #     - ./custom_postgres:/dbt
+  #     - C:/Users/USER/.dbt:/root/.dbt # Adjust this path as needed for your environment
+  #   depends_on:
+  #     elt_script:
+  #       condition: service_completed_successfully
+  #   environment:
+  #     DBT_PROFILE: custom_postgres
+  #     DBT_TARGET: dev
+
+  postgres:
+    image: postgres:17.7
+    ports:
+      - "5435:5432"
     networks:
       - elt_network
-    volumes:
-      - ./custom_postgres:/dbt
-      - C:/Users/USER/.dbt:/root/.dbt # Adjust this path as needed for your environment
-    depends_on:
-      elt_script:
-        condition: service_completed_successfully
     environment:
-      DBT_PROFILE: custom_postgres
-      DBT_TARGET: dev
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DB=airflow
+
+  airflow:
+    build:
+      context: ./airflow
+      dockerfile: Dockerfile
+    user: root
+    networks:
+      - elt_network
+    extra_hosts:
+      - "host.containers.internal:host-gateway"
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./elt_script:/opt/airflow/elt
+      # - /var/run/docker.sock:/var/run/docker.sock # This is for Mac/Linux Podman
+      - /run/podman/podman.sock:/var/run/docker.sock # This is for Windows Podman
+    environment:
+      - LOAD_EX=n
+      - EXECUTOR=Local
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql://airflow:airflow@postgres/airflow
+      # AIRFLOW__CORE__FERNET_KEY is just a random key. generate it by:
+      # python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+      - AIRFLOW__CORE__FERNET_KEY=x9juXXyeMRsolhsCkTKGd6YNzROw_PdIH75dwszFga8= 
+      # - AIRFLOW__CORE__SIMPLE_AUTH_MANAGER_USERS=admin:admin
+    ports:
+      - "8080:8080"
+    command: standalone
 
 networks:
   elt_network:
